# timesketch-mcp-server

./: pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/: main.py
src/timesketch_mcp_server/: tools.py
tests/: test_tools.py  test_utils.py
