[project]
name = "timesketch-mcp-server"
version = "0.1.0"
description = "MCP server for Timesketch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.4",
    "timesketch-api-client>=20251219",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.12",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
