[project]
name = "timesketch-mcp-server"
version = "0.1.0"
description = "MCP server for Timesketch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.4",
    "timesketch-api-client>=20251219",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
